:bug: Home: Fix Hero hidden on mobile

--- a/leblanc/components/home/Hero/Hero.module.css
+++ b/leblanc/components/home/Hero/Hero.module.css
@@ -1,5 +1,6 @@
 .root {
   @apply relative w-full bg-secondary;
+  @apply hidden lg:block;
 }
 
 .imageContainer {
